# ipl-viz

./: LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
data/: field_tactics.py  playoffs.json  points_table.json  stadium_lookup.py  stadiums.json  team_colors.py  team_registry.py  theme.py
data/ipl_json/2008/: .index.json
data/ipl_json/2009/: .index.json
data/ipl_json/2010/: .index.json
data/ipl_json/2011/: .index.json
data/ipl_json/2012/: .index.json
data/ipl_json/2013/: .index.json
data/ipl_json/2014/: .index.json
data/ipl_json/2015/: .index.json
data/ipl_json/2016/: .index.json
data/ipl_json/2017/: .index.json
data/ipl_json/2018/: .index.json
data/ipl_json/2019/: .index.json
data/ipl_json/2020/: .index.json
data/ipl_json/2022/: .index.json
data/ipl_json/2023/: .index.json
data/ipl_json/2024/: .index.json
data/ipl_json/2025/: .index.json
data_io/: cricsheet.py  match_context.py  season_index.py
engine/: events.py  parser.py  paths.py  reducer.py  stadium.py  state.py  timeline.py  weather.py
render/: field.py  hud.py  points_table.py  scorecard.py  tactical_overlay.py  team_view.py
scripts/: build_executable.py
ui/: dropdown.py  hud.py  match_table.py  panels.py  title_bar.py  view_selector.py
